// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract base case 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/baseTest/test1.js:4
#, javascript-format
msgid \\"test translation \${ name }\\"
msgstr \\"\\"

#: tests/fixtures/baseTest/nested/test2.js:4
msgid \\"test translation 2 \${ name }\\"
msgstr \\"\\""
`;

exports[`extract from js with another default locale 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/ukLocaleTest/index.js:5
#, javascript-format
msgid \\"\${ n } банан\\"
msgid_plural \\"\${ n } банана\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"
msgstr[2] \\"\\""
`;

exports[`extract from jsx 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/testJSXParse.jsx:6
msgid \\"test from jsx\\"
msgstr \\"\\""
`;

exports[`extract from ts 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/tSParse.ts:4
#, javascript-format
msgid \\"\${ a } string\\"
msgstr \\"\\""
`;

exports[`extract from tsx 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Plural-Forms: nplurals=2; plural=(n!=1);\\\\n\\"

#: tests/fixtures/tSXParse.tsx:4
msgid \\"test from tsx\\"
msgstr \\"\\""
`;
